# MrJsonStore

./: Makefile  README.md  pyproject.toml
example/: example.py
mrjsonstore/: __init__.py  handle.py  json_store.py
test/: test_json_store.py  test_json_store_dry_run.py
