[tool.poetry]
name = "mrjsonstore"
version = "0.3.0"
description = "Simple, transparent on-disk JSON store"
authors = ["Ole Kliemann <mail@olekliemann.de>"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
atomicwrites = "^1.4.1"
result = { git = "https://github.com/olekli/result.git", branch = "emulate_question_mark_operator" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
